編集時のdisable対応
